--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>receitas rápidas e faceis</h1>
+    <header class="cabecalho">
+        <imag class="cabecalho-imagem" src="alurastart logo.png" art="logo de alura start"
+        <ul classe="cabecalho -lista">
+            <li classe="cabecalho-listas-item">imagens>
+                <li class="cabecalho-lista-"
+
+        <h1>receitas prática e rápidas</h1>
+    <h1>imagem</h1>
+    
+    </header>
+    
 </body>
 </html>
